demo-server/grpc/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 5353
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: local_service_grpc
                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: local_service_grpc
      connect_timeout: 0.250s
      type: static
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: local_service_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5252
admin:
  access_log_path: "/var/log/envoy_admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
